--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Feliz Cumpleaños Mi Reina Sha</title>
+  <title>Feliz Cumpleaños Reina Danaysia</title>
   <style>
     body {
       margin: 0;
@@ -163,3 +163,4 @@
   </script>
 </body>
 </html>
+
